pre-last version

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 									It serves not only as a means to assess performance but also
 									as an effective training tool for improving typing skills.
 								</h3>
-								<button class="header-info-btn element-animation">
+								<a href="#test-block" class="header-info-btn element-animation">
 									Get started
-								</button>
+								</a>
 							</div>
 						</div>
 					</div>
@@ -141,6 +141,7 @@
 								</h3>
 								<div class="txt"></div>
 								<button class="start-test">Click here to get started</button>
+								<h3 class="time">60 sec</h3>
 							</div>
 							<div class="test-block-right none">
 								<div class="result">
@@ -157,7 +158,7 @@
 											<h4>accuracy</h4>
 											<div class="speed-res">
 												<img src="./public/accuracy-icon.png" alt="" />
-												<h3 class="res"><span>183</span>%</h3>
+												<h3 class="accuracy"><span>183</span>%</h3>
 											</div>
 										</div>
 									</div>
