--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<title>tomAss</title>
 	</head>
 	<body>
+		<img class="scrollTop none" src="./public/arrow-left.png" alt="" />
 		<div id="app">
 			<!-- <div class="menu-burger"></div> -->
 			<main class="main">
